Fixed a spacing use in the calendar

--- a/src/scss/_calendario.scss
+++ b/src/scss/_calendario.scss
@@ -39,6 +39,7 @@
       text-transform: uppercase;
       padding: .8em;
       font-size: .8em;
+      display: block;
 
       &:hover {
         background: $main-color;
